<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/texto1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/intro"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="26sp" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/texto1"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:id="@+id/texto2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"

            android:text="@string/mes"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="26sp" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout1"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:id="@+id/texto3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"

            android:text="@string/dia"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="26sp" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

        </Spinner>

    </LinearLayout>


    <TextView
        android:id="@+id/texto4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/texto5"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_bg"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/accion"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/texto5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginStart="80dp"
        android:background="@drawable/button_bg"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/reservas"
        android:textAllCaps="false"

        android:textColor="@android:color/white"
        android:textSize="22sp" />


</RelativeLayout>