<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/slot1layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/slot_background"

            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/slot1"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/slot1name"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/nadie"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/slot1et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="100dp"
                android:layout_marginRight="100dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/hint1"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/slot1tick"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"

                android:background="@drawable/tick_icon_white"
                android:textColor="@android:color/white"

                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/slot2layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/slot_background"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slot2"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/slot2name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/nadie"

                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/slot2et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="100dp"
                android:layout_marginRight="100dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/hint1"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/slot2tick"
                android:layout_width="46dp"
                android:layout_height="46dp"

                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/tick_icon_white"

                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/slot3layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/slot_background"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slot3"
                android:textColor="@android:color/white"

                android:textSize="24sp" />

            <TextView
                android:id="@+id/slot3name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"

                android:text="@string/nadie"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/slot3et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="100dp"
                android:layout_marginRight="100dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/hint1"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/slot3tick"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/tick_icon_white"

                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/slot4layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/slot_background"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slot4"
                android:textColor="@android:color/white"

                android:textSize="24sp" />

            <TextView
                android:id="@+id/slot4name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"

                android:text="@string/nadie"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/slot4et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"

                android:layout_marginEnd="100dp"
                android:layout_marginRight="100dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/hint1"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/slot4tick"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/tick_icon_white"

                />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>